--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 # Gestion des dates (comme Carbon en PHP)
 chrono = "0.4"
 
+# Async trait (pour les factories)
+async-trait = "0.1"
+
 # Migrations (comme doctrine:migrations)
 migration = { path = "migration" }
 sea-orm-migration = "1.1"
